--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 		<h1> Welcome to When2.0Meet </h1>
 		<p> Please Sign Up Below </p>
 	</div>
-	<form>
+	<form action="/login" method = "post">
 	  <div class="form-group">
 	    <label for="email">Email address</label>
-	    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+	    <input type="email" class="form-control" id="email" name = "email" aria-describedby="emailHelp" placeholder="Enter email">
 	  </div>
 	  <div class="form-group">
 	    <label for="password">Password</label>
-	    <input type="password" class="form-control" id="password" placeholder="Password">
+	    <input type="password" class="form-control" id="password" name = "password" placeholder="Password">
 	  </div>
 	  <button type="submit" class="btn btn-primary">Sign Up</button>
 	</form>
