--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<h1> Welcome to When2.0Meet </h1>
 		<p> Please Sign Up Below </p>
 	</div>
-	<form action="/login" method = "post">
+	<form action="/signup" method = "post">
 	  <div class="form-group">
 	    <label for="email">Email address</label>
 	    <input type="email" class="form-control" id="email" name = "email" aria-describedby="emailHelp" placeholder="Enter email">
